# cli

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  cog.toml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: changelog.yml  deploy.yml  github_release.yml  release.yml
.husky/: pre-commit
nginx-templates/: proxy.conf  static.conf
src/features/env/: index.test.ts  index.ts
src/features/login/: index.ts
src/features/project/: index.ts
src/features/workspace/: index.ts
src/harboor_cli/: cli.py  templates.py
src/infra/spinner/: index.ts
src/services/cli/: harboor.ts
